[package]
name = "khttp"
version = "0.2.0"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework", "server", "minimal"]
description = "A low-level synchronous HTTP/1.1 server/client library"
edition = "2024"
license = "MIT"
authors = ["karlivory"]
homepage = "https://github.com/karlivory/khttp"
repository = "https://github.com/karlivory/khttp"
readme = "README.md"
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[features]
default = []
client = []
epoll = ["libc"]

[dependencies]
memchr = "2"
libc = { version = "0.2", optional = true }

[lib]
name = "khttp"
path = "src/lib.rs"

[workspace]
members = [".", "examples/*", "benchmarks"]

[[example]]
name = "reverse_proxy"
required-features = ["client"]
