[package]
name = "khttp-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dependencies]
httparse = "1.10"
futures-util = "0.3"
chrono = "0.4"
bytes = "1"
khttp = { path = "..", features = ["epoll", "client"] }
criterion = { version = "0.8", features = [] }
axum = "0.8"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net"] }
httpdate = "1.0"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
